--- a/configs/dataset.yaml
+++ b/configs/dataset.yaml
@@ -3,7 +3,7 @@ image:
   height: 1024
 
 directories:
-  skin: "/Users/dylanhawley/Projects/crafty-skins/data/raw/skins/"
+  skin: "/Users/dylanhawley/Projects/crafty-skins/data/raw/skins-post1.8/"
   target: "/Users/dylanhawley/Projects/crafty-skins/data/raw/input/"
   output: "/Users/dylanhawley/Projects/crafty-skins/data/processed/"
 
