Add system prompt

--- a/configs/dataset.yaml
+++ b/configs/dataset.yaml
@@ -3,7 +3,7 @@ image:
   height: 1024
 
 paths:
-  metadata: "/Users/dylanhawley/Projects/crafty-skins/data/raw/metadata/"
+  metadata: "/Users/dylanhawley/Projects/crafty-skins/data/raw/metadata.jsonl"
   skin_dir: "/Users/dylanhawley/Projects/crafty-skins/data/raw/skins-post1.8/"
   target_dir: "/Users/dylanhawley/Projects/crafty-skins/data/raw/input/"
   output_dir: "/Users/dylanhawley/Projects/crafty-skins/data/processed/1024x1024/"
