--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ datasets = "^2.15.0"
 pillow = "^10.1.0"
 numpy = "^1.26.0"
 argparse = "^1.4.0"
+openai = "^1.12.0"
 
 [build-system]
 requires = ["poetry-core"]
